--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p>Phone: +918791991209</p>
             <!-- <p>LinkedIn: linkedin.com/in/johndoe</p> -->
             <div class="buttons">
-                <a href="https://drive.google.com/file/d/14TyA1YYDp2uny-A9X_cBy7al_ZaCmR-Z/view?usp=drive_link" download class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/14TyA1YYDp2uny-A9X_cBy7al_ZaCmR-Z/view?usp=sharing" download class="btn">Download CV</a>
                 <a href="tel:+918791991209" class="btn">Call Me</a>
             </div>
         </div>
